--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-react-splitbuttons": "^25.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,9 @@
     "swiper": "^11.1.1",
     "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "typescript": "^5.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
